Add further notes

--- a/ipynb/one-dimensional.ipynb
+++ b/ipynb/one-dimensional.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1D Problem"
+    "# One-dimensional problems\n",
+    "\n",
+    "We propose two different one-dimensional problems, that relax in:\n",
+    "\n",
+    "1. Quasi-uniform state (uniform state with magnetisation tilting at the boundaries)\n",
+    "2. Helical state\n",
+    "\n",
+    "The simulated material is FeGe with material parameters:\n",
+    "\n",
+    "- $M_\\text{s} = 384 \\,\\text{kA}\\,\\text{m}^{-1}$\n",
+    "- $A = 8.78 \\,\\text{pJ}\\,\\text{m}^{-1}$\n",
+    "- $D = 1.58 \\,\\text{mJ}\\,\\text{m}^{-2}$\n",
+    "\n",
+    "## Quasi-ferromagnetic state\n",
+    "\n",
+    "We simulate a $100 \\,\\text{nm}$ one dimensional sample with $(5 \\,\\text{nm})$"
    ]
   },
   {
